# spotisync

./: .cache  .gitignore  README.md  pyproject.toml  spotify.py  starter.py
flask/: app.py  find_same.py  get_user.py  old_get_user.py
flask/templates/: index.html
music_libs/: Base.py  General.py  Spotify.py  Yandex.py  credentials.py  find_same.py
using_flask/: app.py  find_same.py  get_user.py
using_flask/spotify/: get_user.py
using_flask/templates/: answer.html
using_flask/yandex/: find_same.py  get_user.py
