[tool.poetry]
name = "spotisync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
django = "^4.2.5"
django-admin = "^2.0.2"
yandex-music = "^2.1.1"
vk-api = "^11.9.9"
lxml = "^4.9.3"
flask = "^3.0.0"
memory-profiler = "^0.61.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
